package homework_5.pet;

public interface Playable {
    public void play();
}
