package homework_5.pet;

public interface Walkable {
    public void walk();
}
